--- a/Control-Bienes/src/app/inicio/inicio.html
+++ b/Control-Bienes/src/app/inicio/inicio.html
@@ -1,21 +1,22 @@
-<header>
-  <div class="header">
-    <a href="/index.html">
-    <img class="logofooter" src="./assets/logo-gobierno.jpeg" alt="Logo">
-    </a>
-    <div class="texto_header">
-      <p>SECRETARIA DE OBRAS Y SERVICIOS</p>
-      <p>DIRECCIÓN GENERAL DE SERVICIOS URBANOS Y SUSTENTABILIDAD</p>
-      <p>DIRECCIÓN DE ALUMBRADO PÚBLICO</p>
+<body>
+  <header>
+    <div class="header">
+      <a href="/index.html">
+        <img class="logofooter" src="./assets/logo-gobierno.jpeg" alt="Logo">
+      </a>
+      <div class="texto_header">
+        <p>SECRETARIA DE OBRAS Y SERVICIOS</p>
+        <p>DIRECCIÓN GENERAL DE SERVICIOS URBANOS Y SUSTENTABILIDAD</p>
+        <p>DIRECCIÓN DE ALUMBRADO PÚBLICO</p>
+      </div>
     </div>
-  </div>
-</header>
-
-<main>
-
+  </header>
+  
+  <main>
+    
     <h1 class="titulo">Control de Bienes Informáticos</h1>
     <h2 class="subtitulo">Informes</h2>
-
+    
     <div class="botones-container">
       <div class="registro-columna">
         <button class="registroBoton" [routerLink]="['/registro']">Registro</button>
@@ -33,12 +34,6 @@
         <button class="botoncolumna2" [routerLink]="['/responsable-Especifico']">Por Responsable Específico</button>
       </div>
     </div>
-
-</main>
-
-<footer>
-  <div class="footer-text">
-    <div>Diseñado y Operado por el Área de Desarrollo y Control de Sistemas de la Información de Alumbrado Público</div>
-    <div>Ing. Manuel Alejandro Ramos Parra</div>
-  </div>
-</footer>
+    
+  </main>
+</body>
